--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <main id="root">
 
     </main>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
